add second edit

--- a/arabic/pug/magazine-services.pug
+++ b/arabic/pug/magazine-services.pug
@@ -101,19 +101,19 @@ block home_block
                     div(class="modal-form")
                         form
                             div(class="row")
-                                div(class="col-6") 
+                                div(class="col-md-6") 
                                     div(class="mb-3") 
                                         input#username(type="text", class="form-control", aria-describedby="username",placeholder="الاسم") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#exampleInputEmail1(type="email", class="form-control", aria-describedby="emailHelp",placeholder="البريد الالكتروني") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#mobilenumer(type="text", class="form-control",placeholder="رقم الهاتف") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#location(type="text", class="form-control",placeholder="الجهة او الاداراة ")   
-                                div(class="col-12")   
+                                div(class="col-md-12")   
                                     div(class="mb-3") 
                                         textarea#exampleFormControlTextarea1(class="form-control", rows="10",placeholder="تفاصيل المناسبة") 
                             button(type="submit", class="btn btn-primary") ارسال
