--- a/pug/contactus.pug
+++ b/pug/contactus.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") Contact Us
                         
