--- a/pug/decisions.pug
+++ b/pug/decisions.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") Decisions 
                         
@@ -17,55 +17,55 @@ block home_block
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/01.png",alt="decision")
+                                img(src="images/decisions/01.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/03.png",alt="decision")
+                                img(src="images//decisions/03.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/02.png",alt="decision")
+                                img(src="images//decisions/02.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/04.png",alt="decision")
+                                img(src="images//decisions/04.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/06.png",alt="decision")
+                                img(src="images//decisions/06.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/05.png",alt="decision")
+                                img(src="images//decisions/05.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/03.png",alt="decision")
+                                img(src="images//decisions/03.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/04.png",alt="decision")
+                                img(src="images//decisions/04.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research
                     div(class="col-md-4")
                         div(class="decision-box")
                             div(class="user-image")
-                                img(src="../images//decisions/05.png",alt="decision")
+                                img(src="images//decisions/05.png",alt="decision")
                             div(class="title")
                                 a(href="#",data-bs-toggle="modal" data-bs-target="#exampleModal") Appointing Dr. Abdullah bin Nidal Addas as Undersecretary for Postgraduate Studies and Scientific Research    
                 div(class="pagination navigation")
@@ -98,4 +98,4 @@ block home_block
                         i(class="bi bi-x-lg")
                 div(class="modal-body")
                     div(class="modal-image")
-                        img(src="../images//decisions/decsion1.png",alt="decision photo")
+                        img(src="images//decisions/decsion1.png",alt="decision photo")
