--- a/pug/includes/header.pug
+++ b/pug/includes/header.pug
@@ -119,19 +119,23 @@ header
                         li(class="nav-item")
                             a(class="nav-link", href="news.html") News
                         li(class="nav-item")
-                            a(class="nav-link", href="services.html") Decisisons
+                            a(class="nav-link", href="articles.html") Articles
                         li(class="nav-item")
-                            a(class="nav-link", href="services.html") Interfiews
+                            a(class="nav-link", href="decisions.html") Decisisons
                         li(class="nav-item")
-                            a(class="nav-link", href="services.html") Sociaty 
+                            a(class="nav-link", href="reports.html") Reports 
                         li(class="nav-item")
-                            a(class="nav-link", href="services.html") NewsPaper Services            
+                            a(class="nav-link", href="meetings.html") Meetings           
                         li(class="nav-item")
-                            a(class="nav-link", href="contact.html") contact us  
+                            a(class="nav-link", href="socaity.html") University Sociaty
+                        li(class="nav-item")
+                            a(class="nav-link", href="magazine-services.html") Magazine Services 
+                        li(class="nav-item")
+                            a(class="nav-link", href="contactus.html") Contact Us   
                         div(class="icons")
                             a(href="#" class="search")
                                 i(class="bi bi-search")      
-                            a(href="../arabic/index.html" class="lang")   العربية
+                            a(href="arabic/index.html" class="lang")   العربية
                             ul(class="social__icons") 
                                 li
                                     a(href="#!")
