--- a/pug/meetings.pug
+++ b/pug/meetings.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") meetings 
                         
@@ -17,59 +17,59 @@ block home_block
                     div(class="col-md-4 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box report-box")
                             div(class="article-thumbnail report-box")
-                                img(src="../images//mettings/page/01.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/01.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text report-text")
                                 h5
-                                    a(href="#!") A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj
+                                    a(href="single-meeting.html") A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj
                     div(class="col-md-4 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//mettings/page/02.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/02.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text")
                                 h5
-                                    a(href="#!") An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri
+                                    a(href="single-meeting.html") An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri
                               
                     div(class="col-md-4 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//mettings/page/03.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/03.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text")
                                 h5
-                                    a(href="#!") The Vice Rector for Female Student Affairs in a press interview
+                                    a(href="single-meeting.html") The Vice Rector for Female Student Affairs in a press interview
   
                     div(class="col-md-4 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//mettings/page/03.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/03.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text")
                                 h5
-                                    a(href="#!") The Vice Rector for Female Student Affairs in a press interview
+                                    a(href="single-meeting.html") The Vice Rector for Female Student Affairs in a press interview
                     div(class="col-md-4 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box report-box")
                             div(class="article-thumbnail report-box")
-                                img(src="../images//mettings/page/01.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/01.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text report-text")
                                 h5
-                                    a(href="#!") A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj
+                                    a(href="single-meeting.html") A trip to seek knowledge .. from Guinea-Bissau to Al-Kharj
                     div(class="col-md-4 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//mettings/page/02.png",alt="article",class="img-fluid")
+                                img(src="images/mettings/page/02.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p date of added:  sunday 13 june 2021 9:14
                             div(class="article-text")
                                 h5
-                                    a(href="#!") An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri
+                                    a(href="single-meeting.html") An interview for my university newspaper with the employee of the security department at the university, Jawhar bin Saad Al-Khibri
                               
                 div(class="pagination navigation")
                     nav(aria-label="Page navigation example")
