--- a/pug/single-meeting.pug
+++ b/pug/single-meeting.pug
@@ -11,7 +11,7 @@ block home_block
         div(class="container") 
             div(class="article-detail")
                 div(class="article-thumbnail")    
-                    img(src="../images//mettings/page/single2.svg",alt="news",class="img-fluid")
+                    img(src="images/mettings/page/single2.svg",alt="news",class="img-fluid")
                 div(class="article-text")
                     h4(class="title") Twitter Spaces..a knowledge and intellectual exchange
                     div(class="article-author") 
@@ -38,7 +38,7 @@ block home_block
                         div(class="share-options")
                             p
                                 | share 
-                                img(src="../images//icons/shareen.svg")
+                                img(src="images/icons/shareen.svg")
                             ul(class="socail-media")
                                 li 
                                     a(href="#!")
