--- a/pug/single.news.pug
+++ b/pug/single.news.pug
@@ -4,14 +4,14 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") News 
     div(class="single-news wow fadeInUp",  data-wow-duration="1s" data-wow-delay="1s")
         div(class="container")
             div(class="news-detail")
                 div(class="news-thumbnail")    
-                    img(src="../images//news/s1.svg",alt="news",class="img-fluid")
+                    img(src="images/news/s1.svg",alt="news",class="img-fluid")
                 div(class="news-text")
                     h4(class="title") The President of the University inaugurates the Digital Academic Advising Platform (Wajehni)
                     article
@@ -20,15 +20,15 @@ block home_block
                         p The Wajehni platform aims to raise the efficiency of academic advising by providing solutions for communication between students, academic supervisors, departments of departments and colleges, including analysis of student performance through graphs based on business intelligence techniques and integrating with all supporting academic systems.
                 div(class="single-news-carousel owl-carousel owl-theme")
                     div(class="single-news-item")
-                        img(src="../images//news/slider1.svg",alt="news-1")        
+                        img(src="images/news/slider1.svg",alt="news-1")        
                     div(class="single-news-item")
-                        img(src="../images//news/slider1.svg",alt="news-1")        
+                        img(src="images/news/slider1.svg",alt="news-1")        
                     div(class="single-news-item")
-                        img(src="../images//news/slider1.svg",alt="news-1")        
+                        img(src="images/news/slider1.svg",alt="news-1")        
                     div(class="single-news-item")
-                        img(src="../images//news/slider1.svg",alt="news-1")        
+                        img(src="images/news/slider1.svg",alt="news-1")        
                     div(class="single-news-item")
-                        img(src="../images//news/slider1.svg",alt="news-1")        
+                        img(src="images/news/slider1.svg",alt="news-1")        
         div(class="share")
             hr
             div(class="news-option")
@@ -44,7 +44,7 @@ block home_block
                         div(class="share-options")
                             p
                                 | share 
-                                img(src="../images//icons/shareen.svg")
+                                img(src="images/icons/shareen.svg")
                             ul(class="socail-media")
                                 li 
                                     a(href="#!")
