--- a/sass/_pages-style.scss
+++ b/sass/_pages-style.scss
@@ -680,7 +680,7 @@ section.news-section {
                     font-size: 13px;
                     line-height: 11px;
                     color: #696969;
-                    margin-inline-end: 10px;
+                    margin:0 10px;
                     i {
                         padding-inline-end: 10px;
                     }
