--- a/includes/header.html
+++ b/includes/header.html
@@ -76,12 +76,14 @@
           <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" aria-current="page" href="index.html">home</a></li>
             <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Decisisons</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Interfiews</a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">Sociaty </a></li>
-            <li class="nav-item"><a class="nav-link" href="services.html">NewsPaper Services            </a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">contact us  </a></li>
-            <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="../arabic/index.html">  العربية</a>
+            <li class="nav-item"><a class="nav-link" href="articles.html">Articles</a></li>
+            <li class="nav-item"><a class="nav-link" href="decisions.html">Decisisons</a></li>
+            <li class="nav-item"><a class="nav-link" href="reports.html">Reports </a></li>
+            <li class="nav-item"><a class="nav-link" href="meetings.html">Meetings           </a></li>
+            <li class="nav-item"><a class="nav-link" href="socaity.html">University Sociaty</a></li>
+            <li class="nav-item"><a class="nav-link" href="magazine-services.html">Magazine Services </a></li>
+            <li class="nav-item"><a class="nav-link" href="contactus.html">Contact Us   </a></li>
+            <div class="icons"><a class="search" href="#"><i class="bi bi-search">     </i></a><a class="lang" href="arabic/index.html">  العربية</a>
               <ul class="social__icons"> 
                 <li><a href="#!"><i class="bi bi-twitter"></i></a></li>
                 <li><a href="#!"><i class="bi bi-facebook"> </i></a></li>
