--- a/pug/articles.pug
+++ b/pug/articles.pug
@@ -17,61 +17,61 @@ block home_block
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//articles/01.png",alt="article",class="img-fluid")
+                                img(src="images/articles/01.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p Dr. Jinan Abdulaziz Al-Tamimi, Professor of Linguistics
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Distracted reading
+                                    a(href="single-article.html") Distracted reading
                                 p(class="article-desc") Did you happen to open Twitter or Instagram and find the timeline on your phone screen quickly passing by successive quotes: “Beware job burnout” and then: “Be like a candle that burns to light up others,” and then another quote: “The root of happiness is altruism.” It comes immediately after it: Be selfish...
 
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-article.html")
                                         span more detail
                                         i(class="bi bi-chevron-double-right")
                     div(class="col-md-6 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//articles/02.png",alt="article",class="img-fluid")
+                                img(src="images/articles/02.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p Pharmacist: Esra Abdullah Al-Othman
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Our career goals for the new year
+                                    a(href="single-article.html") Our career goals for the new year
                                 p(class="article-desc") Allocating the employee time to write his goals for the New Year gives him the opportunity to reflect and look at his ambitions and focus on achieving them on the ground to a greater extent than those who walk in his life without planning, in addition to strengthening his spirit of challenge to reach the maximum successes...
 
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-article.html")
                                         span more detail
                                         i(class="bi bi-chevron-double-right")
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//articles/03.png",alt="article",class="img-fluid")
+                                img(src="images/articles/03.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p Assistant Professor of Electrical Engineering at the College of Engineering in Wadi Al-Dawasir, Dr. Ahmed Metwally Nassef
                             div(class="article-text")
                                 h5
-                                    a(href="#!") The silence of the earth speaks
+                                    a(href="single-article.html") The silence of the earth speaks
                                 p(class="article-desc") Finally, the world woke up to the inevitability of preserving this planet (Planet Earth) in which we live and includes all of us. The planet that has long suffered and is still suffering from the threat of climate change due to human beings. There are many countries that suffer from desertification, water scarcity and fires, and others suffer from floods, hurricanes and avalanches....
 
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-article.html")
                                         span more detail
                                         i(class="bi bi-chevron-double-right")
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//articles/04.png",alt="article",class="img-fluid")
+                                img(src="images/articles/04.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p Pharmacist: Esra Abdullah Al-Othman
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Twitter Spaces..a knowledge and intellectual exchange
+                                    a(href="single-article.html") Twitter Spaces..a knowledge and intellectual exchange
                                 p(class="article-desc") Keeping pace with the knowledge explosion, and benefiting from technological progress in the delivery of new knowledge to each individual due to the rapid progress in the field of science and knowledge that we live in in this era requires the individual to continue learning, it is no longer useful for one to stop learning once the years of learning in the school stages are over Just ....
 
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-article.html")
                                         span more detail
                                         i(class="bi bi-chevron-double-right")
                             
