--- a/pug/index.pug
+++ b/pug/index.pug
@@ -24,8 +24,8 @@ html(lang="en")
             //PreLoader
             div(class="loader")
                 video(width="auto", height="auto" muted autoplay loop)
-                    source(src="../video/loading1.webm", type="video/mp4")
-                    source(src="../videos/video.ogg", type="video/ogg")
+                    source(src="video/loading1.webm", type="video/mp4")
+                    source(src="videos/video.ogg", type="video/ogg")
                     | Your browser does not support the video tag.
             //PreLoader
             include includes/header.pug
