--- a/pug/magazine-services.pug
+++ b/pug/magazine-services.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") Our Servcies 
                         
@@ -17,75 +17,75 @@ block home_block
             div(class="content magazine-services") 
                 div(class="magazine-grid")
                     div(class="magazine-box")
-                        img(src="../images//services/1.svg",alt="services",class="img-fluid")
+                        img(src="images/services/1.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!",data-bs-toggle="modal" data-bs-target="#messageModal") Send Message  
                     div(class="magazine-box")
-                        img(src="../images//services/2.svg",alt="services",class="img-fluid")
+                        img(src="images/services/2.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Reserve Tree    
                     div(class="magazine-box")
-                        img(src="../images//services/3.svg",alt="services",class="img-fluid")
+                        img(src="images/services/3.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Photography event or event  
                     div(class="magazine-box")
-                        img(src="../images//services/4.svg",alt="services",class="img-fluid")
+                        img(src="images/services/4.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Event calendar
                     div(class="magazine-box")
-                        img(src="../images//services/5.svg",alt="services",class="img-fluid")
+                        img(src="images/services/5.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Date Converter
                     div(class="magazine-box")
-                        img(src="../images//services/6.svg",alt="services",class="img-fluid")
+                        img(src="images/services/6.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") The weather today 
                     div(class="magazine-box")
-                        img(src="../images//services/1.svg",alt="services",class="img-fluid")
+                        img(src="images/services/1.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!",data-bs-toggle="modal" data-bs-target="#messageModal") Send Message  
                     div(class="magazine-box")
-                        img(src="../images//services/2.svg",alt="services",class="img-fluid")
+                        img(src="images/services/2.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Reserve Tree    
                     div(class="magazine-box")
-                        img(src="../images//services/3.svg",alt="services",class="img-fluid")
+                        img(src="images/services/3.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Photography event or event  
                     div(class="magazine-box")
-                        img(src="../images//services/4.svg",alt="services",class="img-fluid")
+                        img(src="images/services/4.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Event calendar
                     div(class="magazine-box")
-                        img(src="../images//services/5.svg",alt="services",class="img-fluid")
+                        img(src="images/services/5.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Date Converter
                     div(class="magazine-box")
-                        img(src="../images//services/6.svg",alt="services",class="img-fluid")
+                        img(src="images/services/6.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") The weather today 
                     div(class="magazine-box")
-                        img(src="../images//services/1.svg",alt="services",class="img-fluid")
+                        img(src="images/services/1.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!",data-bs-toggle="modal" data-bs-target="#messageModal") Send Message  
                     div(class="magazine-box")
-                        img(src="../images//services/2.svg",alt="services",class="img-fluid")
+                        img(src="images/services/2.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Reserve Tree    
                     div(class="magazine-box")
-                        img(src="../images//services/3.svg",alt="services",class="img-fluid")
+                        img(src="images/services/3.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Photography event or event  
                     div(class="magazine-box")
-                        img(src="../images//services/4.svg",alt="services",class="img-fluid")
+                        img(src="images/services/4.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Event calendar
                     div(class="magazine-box")
-                        img(src="../images//services/5.svg",alt="services",class="img-fluid")
+                        img(src="images/services/5.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") Date Converter
                     div(class="magazine-box")
-                        img(src="../images//services/6.svg",alt="services",class="img-fluid")
+                        img(src="images/services/6.svg",alt="services",class="img-fluid")
                         h4
                             a(href="#!") The weather today 
                                                     
@@ -94,7 +94,7 @@ block home_block
             div(class="modal-content")
                 div(class="modal-header") 
                     div(class="modal-title")
-                        img(src="../images//services/1.svg",alt="services",class="img-fluid")
+                        img(src="images/services/1.svg",alt="services",class="img-fluid")
                         h4 Send Message  
                     button(type="button", class="close", data-bs-dismiss="modal", aria-label="Close")
                         i(class="bi bi-x-lg")
@@ -102,19 +102,19 @@ block home_block
                     div(class="modal-form")
                         form
                             div(class="row")
-                                div(class="col-6") 
+                                div(class="col-md-6") 
                                     div(class="mb-3") 
                                         input#username(type="text", class="form-control", aria-describedby="username",placeholder="username") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#exampleInputEmail1(type="email", class="form-control", aria-describedby="emailHelp",placeholder="email") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#mobilenumer(type="text", class="form-control",placeholder="phone number") 
-                                div(class="col-6")         
+                                div(class="col-md-6")         
                                     div(class="mb-3") 
                                         input#location(type="text", class="form-control",placeholder="company or location")   
-                                div(class="col-12")   
+                                div(class="col-md-12")   
                                     div(class="mb-3") 
                                         textarea#exampleFormControlTextarea1(class="form-control", rows="10",placeholder="event details") 
                             button(type="submit", class="btn btn-primary") send
