--- a/pug/news.pug
+++ b/pug/news.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") News 
                         
@@ -17,63 +17,63 @@ block home_block
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="news-box")
                             div(class="news-thumbnail")
-                                img(src="../images//news/01.svg",alt="news",class="img-fluid")
+                                img(src="images/news/01.svg",alt="news",class="img-fluid")
                             div(class="news-title")
                                 h5
-                                    a(href="#!") The President of the University inaugurates the Academic Advising Platform (Wajehni)
+                                    a(href="single-news.html") The President of the University inaugurates the Academic Advising Platform (Wajehni)
                             div(class="news-meta")
                                 div(class="time")
                                     i(class="bi bi-calendar")
                                     | Sunday, October 24, 2021 - 19:24
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-news.html")
                                         span more detail
-                                        img(class="more-icon",src="../images//icons/more-details.svg")
+                                        img(class="more-icon",src="images/icons/more-details.svg")
                     div(class="col-md-6 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="news-box")
                             div(class="news-thumbnail")
-                                img(src="../images//news/02.svg",alt="news",class="img-fluid")
+                                img(src="images/news/02.svg",alt="news",class="img-fluid")
                             div(class="news-title")
                                 h5
-                                    a(href="#!") The library at the College of Science in Hotat Bani Tamim holds an introductory program on its services for new students
+                                    a(href="single-news.html") The library at the College of Science in Hotat Bani Tamim holds an introductory program on its services for new students
                             div(class="news-meta")
                                 div(class="time")
                                     i(class="bi bi-calendar")
                                     | Sunday, October 24, 2021 - 19:24
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-news.html")
                                         span more detail
-                                        img(class="more-icon",src="../images//icons/more-details.svg")
+                                        img(class="more-icon",src="images/icons/more-details.svg")
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="news-box")
                             div(class="news-thumbnail")
-                                img(src="../images//news/03.svg",alt="news",class="img-fluid")
+                                img(src="images/news/03.svg",alt="news",class="img-fluid")
                             div(class="news-title")
                                 h5
-                                    a(href="#!") The Dean of the College of Business Administration in Al-Houta on an inspection tour of student registration affairs for courses on the first academic day of the first semester
+                                    a(href="single-news.html") The Dean of the College of Business Administration in Al-Houta on an inspection tour of student registration affairs for courses on the first academic day of the first semester
                             div(class="news-meta")
                                 div(class="time")
                                     i(class="bi bi-calendar")
                                     | Sunday, October 24, 2021 - 19:24
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-news.html")
                                         span more detail
-                                        img(class="more-icon",src="../images//icons/more-details.svg")                    
+                                        img(class="more-icon",src="images/icons/more-details.svg")                    
                     div(class="col-md-6 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="news-box")
                             div(class="news-thumbnail")
-                                img(src="../images//news/04.svg",alt="news",class="img-fluid")
+                                img(src="images/news/04.svg",alt="news",class="img-fluid")
                             div(class="news-title")
                                 h5
-                                    a(href="#!") Prince Sattam University holds a meeting with faculty members and students about the approved study plans for the three semesters
+                                    a(href="single-news.html") Prince Sattam University holds a meeting with faculty members and students about the approved study plans for the three semesters
                             div(class="news-meta")
                                 div(class="time")
                                     i(class="bi bi-calendar")
                                     | Sunday, October 24, 2021 - 19:24
                                 div(class="read-more")
-                                    a(href="#!")
+                                    a(href="single-news.html")
                                         span more detail
-                                        img(class="more-icon",src="../images//icons/more-details.svg")     
+                                        img(class="more-icon",src="images/icons/more-details.svg")     
                 div(class="pagination navigation")
                     nav(aria-label="Page navigation example")
                         ul(class="pagination")
