--- a/pug/reports.pug
+++ b/pug/reports.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") Reports 
                         
@@ -17,41 +17,41 @@ block home_block
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box report-box")
                             div(class="article-thumbnail report-box")
-                                img(src="../images//reports/01.png",alt="article",class="img-fluid")
+                                img(src="images/reports/01.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p sunday 13 june 2021 9:16
                             div(class="article-text report-text")
                                 h5
-                                    a(href="#!") Prince Sattam bin Abdulaziz University concludes its participation in the International Conference and Exhibition for Education 2022 AD in Riyadh
+                                    a(href="single-report.html") Prince Sattam bin Abdulaziz University concludes its participation in the International Conference and Exhibition for Education 2022 AD in Riyadh
                     div(class="col-md-6 wow fadeInLeft",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//reports/02.png",alt="article",class="img-fluid")
+                                img(src="images/reports/02.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p sunday 13 june 2021 9:16
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Deanship of Library Affairs towards digital transformation in the main reference for services and knowledge sources of all kinds
+                                    a(href="single-report.html") Deanship of Library Affairs towards digital transformation in the main reference for services and knowledge sources of all kinds
                               
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//reports/03.png",alt="article",class="img-fluid")
+                                img(src="images/reports/03.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p sunday 13 june 2021 9:16
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Expanded report: The Clinical Skills and Simulation Center at the College of Medicine is a specialized edifice and an essential link between knowledge and application
+                                    a(href="single-report.html") Expanded report: The Clinical Skills and Simulation Center at the College of Medicine is a specialized edifice and an essential link between knowledge and application
   
                     div(class="col-md-6 wow fadeInRight",  data-wow-duration="1s" data-wow-delay="1.5s")
                         div(class="article-box")
                             div(class="article-thumbnail")
-                                img(src="../images//reports/04.png",alt="article",class="img-fluid")
+                                img(src="images/reports/04.png",alt="article",class="img-fluid")
                                 div(class="author")
                                     p sunday 13 june 2021 9:16
                             div(class="article-text")
                                 h5
-                                    a(href="#!") Expanded report: The labs of the College of Engineering and Computer Science are an advanced educational edifice and integrated technical care
+                                    a(href="single-report.html") Expanded report: The labs of the College of Engineering and Computer Science are an advanced educational edifice and integrated technical care
                          
                 div(class="pagination navigation")
                     nav(aria-label="Page navigation example")
