--- a/pug/socaity.pug
+++ b/pug/socaity.pug
@@ -4,7 +4,7 @@ block home_block
         div(class="container")
             ul(class="breadcrumb")
                 li(class="breadcrumb-item")
-                    a(href="#!") Main Page
+                    a(href="index.html") Main Page
                 li(class="breadcrumb-item active")
                     a(href="#!") Univeristy Socaity
     section(class="socaity no-before")
@@ -16,37 +16,37 @@ block home_block
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/1.svg",alt="socaity",class="img-fluid")
                             div(class="text")
                                 a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/2.png",alt="socaity",class="img-fluid")
                             div(class="text")
                                  a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/3.png",alt="socaity",class="img-fluid")
                             div(class="text")
                                  a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/4.png",alt="socaity",class="img-fluid")
                             div(class="text")
                                  a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world    
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/5.png",alt="socaity",class="img-fluid")
                             div(class="text")
                                  a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world  
                     div(class="col-md-4")
                         div(class="socaity-box")
                             div(class="image")
-                                img(src="../images//socaity/1.svg",alt="socaity",class="img-fluid")
+                                img(src="images/socaity/6.png",alt="socaity",class="img-fluid")
                             div(class="text")
                                  a(href="#!",data-bs-toggle="modal" data-bs-target="#socaityModal") The university congratulates the wedding of Mr. Walid Al-Sulaiten, a blessed marriage, as long as happiness in your world                                   
                         
@@ -58,7 +58,7 @@ block home_block
                         i(class="bi bi-x-lg")
                 div(class="modal-body")
                     div(class="modal-image")
-                        img(src="../images//socaity/socaity.png",alt="decision photo")  
+                        img(src="images/socaity/socaity.png",alt="decision photo")  
                     div(class="modal-text")
                         h4 Makind in Da'asala, Tamad Karabem, exceeded Netelsla's Delo / Fafzl Ajala Krab
                         p In eiusmod sit aute excepteur laboris sunt deserunt consectetur laboris. Esse id laborum fugiat nulla cillum et quis aute ad ad excepteur pariatur reprehenderit. Proident incididunt qui nostrud dolor. Enim consectetur nisi aute nisi consequat veniam nulla ut nostrud non amet voluptate. Qui sit ipsum deserunt qui amet sit anim. Deserunt adipisicing commodo exercitation ipsum dolor sint veniam. Non veniam culpa ipsum pariatur consectetur aute est reprehenderit esse qui minim voluptate amet.                          
