--- a/sass/_main-style.scss
+++ b/sass/_main-style.scss
@@ -216,7 +216,7 @@ header {
         box-shadow: 0 4px 20px 0 rgb(115 115 115 / 14%), 0 7px 10px -5px rgb(126 126 126 / 40%);
         @include transition(all ease 0.3s);
         position: fixed;
-        z-index: 999999;
+        z-index: 999;
     }
     .navbar-brand {
         @extend %center;
@@ -529,6 +529,7 @@ header {
                             &::after{
                                 background:unset;
                                 background-color: var(--main-color);
+                                height: 2px;
                                
                             }
                           
@@ -1156,11 +1157,14 @@ section.articles {
         background-repeat: no-repeat;
     }
     .article-box {
+        @include transition(all 0.5s ease-in-out);
+        min-height: 400px;
         .heading {
             .image {
                 position: relative;
                 border-radius: 5px;
                 margin-inline-end: 1rem;
+                
                 overflow: hidden;
                 &::after {
                     @extend %overlay;
@@ -1177,7 +1181,7 @@ section.articles {
                     bottom: 10px;
                     width: 100%;
                     color: #fff;
-                    z-index: 99999;
+                    z-index: 9;
                     padding: 1rem;
                 }
             }
@@ -1190,8 +1194,10 @@ section.articles {
                     font-weight: 700;
                     font-size: 14px;
                     line-height: 24px;
+                  
                     /* or 171% */
                     text-align: center;
+                   
                 }
             }
             .author {
@@ -1216,6 +1222,11 @@ section.articles {
                     text-align: inherit;
                 }
             }
+        }
+        &:hover{
+            -webkit-box-shadow: 0 2px 10px rgb(0 0 0 / 10%); 
+            transform: translateY(-10px);
+            -webkit-transform: translateY(-10px);
         }
     }
 }
@@ -1243,8 +1254,7 @@ section.decisions {
         // gap: 3%;
         // flex-wrap: nowrap;
         .decisions-box {
-            // flex-basis: 100%;
-            // max-width: 100%;
+            @include transition(all 0.5s ease-in-out); 
             margin-inline-end: 30px;
             .image {
                 // box-shadow: -11px -11px 0px 0px #e3dfd3;
@@ -1268,7 +1278,18 @@ section.decisions {
                     color: #5D2509;
                 }
             }
+            &:hover{
+                -webkit-box-shadow: 0 2px 10px rgb(0 0 0 / 10%); 
+                transform: translateY(-10px);
+                -webkit-transform: translateY(-10px);
+                .text{
+                    p{
+                        color: $main_color;
+                    }
+                }
+            }
         }
+       
     }
     .owl-theme {
         .owl-nav [class*=owl-] {
@@ -1418,7 +1439,7 @@ section.mettings {
         .border-between {
             border: 1px dashed #E0E0E0;
             transform: rotate(-180deg);
-            width: 80%;
+            width: 70%;
         }
         &::after {
             content: unset;
